@@ -28,3 +28,4 @@ romain.tartiere@healthgrid.org -- ldap fixes
 Adam Monsen - spec file updates
 Matthew Palmer <mpalmer@debian.org> -- halt loglevel feature
 dan@garthwaite.org -- reportspace bugfix
+Tuomas Jormola <tj@solitudo.net> -- "when = manual" option
